--- a/src/main/resources/config.yaml
+++ b/src/main/resources/config.yaml
@@ -2,5 +2,5 @@ db:
   host: devdb.integrationcity.dev
   port: "25060"
   database: iqhealth
-  user: youruser
-  password: yourpassword
+  user: gamma
+  
